# aw-watcher-window-wayland

./: .gitignore  Cargo.toml  Makefile  README.md  aw-watcher-window-wayland.desktop
.github/workflows/: build.yml
src/: build.rs  current_window.rs  idle.rs  main.rs  singleinstance.rs  utils.rs  wl_client.rs
